# pulseguardian

./: .gitignore  .taskcluster.yml  .travis.yml  Procfile  README.md  alembic.ini  docker-compose.yml  gen_secret_key.py  pyproject.toml  renovate.json  requirements.txt  setup.py  stackato.yml
docker/: Dockerfile  Dockerfile-pgbase  Dockerfile-pgguardian  Dockerfile-pgweb
docker/pulse/: Dockerfile
flask_secure_headers/: README.md  core.py  headers.py
guardian/: daemon.py
guardian/test/: runtests.py
migration/: env.py
migration/versions/: 1ff5c08b2ac_remove_pulse_user_owner_id_field.py  24a44075f9ce_create_binding_table.py  2d19bced283e_move_email_and_associate_to_queue.py  4bd0784e2978_create_pulse_user_owners_table_create_.py  4ea622b0c81d_add_unbounded_on_queue.py  641f40e01a9_add_durable_field_on_queue.py
pulseguardian/: Dockerfile  __init__.py  auth.py  config.py  config.py.example  config.py.travis  create_admin.sh  dbinit.py  guardian.py  logs.py  management.py  mozdef.py  runtests.py  sendemail.py  web.py
pulseguardian/model/: base.py  binding.py  email.py  models.py  pulse_user.py  queue.py  queue_notification.py  user.py
pulseguardian/static/: contribute.json
pulseguardian/static/css/: main.css
pulseguardian/static/js/: auth0.js  base.js  deletable.js  persona.js  profile.js  pulse_users_listing.js  queues.js  rabbitmq_accounts.js  users_listing.js
pulseguardian/templates/: activate.html  activation_email.html  all_pulse_users.html  all_users.html  base.html  confirm.html  dialogs.html  header.html  index.html  menu.html  message_formats.html  msgformat.html  profile.html  queues.html  queues_listing.html  quickstart.html  rabbitmq_accounts.html  register.html  roadmap.html  users_listing.html
pulseguardian/upgrade/: multiple_users.py
src/: app.py  config.py  config.py.example  dbinit.py  guardian.py  management.py  runtests.py  sendemail.py  web.py
src/guardian/: guardian.py
src/model/: base.py  queue.py  user.py
src/static/css/: main.css
src/static/js/: profile.js
src/templates/: activate.html  activation_email.html  header.html  index.html  profile.html
test/: Dockerfile  docker_setup.py  runtests.py
web/: app.py
web/model/: base.py  user.py
web/templates/: base.html  confirm.html  header.html  index.html
