[project]
name = "PulseGuardian"
version = "0.2.0"
description = "Monitoring tool and web app for the Pulse message system: pulse.mozilla.org"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MPL-2.0"}
authors = [
    {name = "Mozilla A-Team", email = "auto-tools@mozilla.com"}
]
keywords = ["pulse", "mozilla", "rabbitmq", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
]

dependencies = [
    # Core Framework
    "flask>=3.1.0,<4.0",
    "werkzeug>=3.1.0,<4.0",
    "jinja2>=3.1.4",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "click>=8.1.0",

    # Database
    "sqlalchemy>=2.0.35,<3.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # RabbitMQ/Messaging
    "MozillaPulse>=1.3.0",
    "kombu>=5.4.2",
    "amqp>=5.3.1",
    "vine>=5.0.0",

    # Authentication
    "authlib>=1.4.0",

    # Security
    "cryptography>=44.0.0",
    "certifi>=2024.8.30",

    # HTTP
    "requests>=2.32.3",
    "urllib3>=2.2.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "python-editor>=1.0.4",
    "markupsafe>=3.0.0",
    "mako>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-flask>=1.3.0",
]

[project.urls]
Homepage = "https://wiki.mozilla.org/Auto-tools/Projects/Pulse/PulseGuardian"
Repository = "https://github.com/mozilla-services/pulseguardian"
Issues = "https://github.com/mozilla-services/pulseguardian/issues"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pulseguardian*", "flask_secure_headers*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["pulseguardian"]
omit = ["*/tests/*", "*/test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
